Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
     }
 body {
 	padding: 0;
-	margin: 90px 0 0 0;
+	margin: 40px 0 0 0;
   	color: #493c33;
   	background-color: black;
 	background-size: 1080px;
@@ -193,7 +193,7 @@ footer {
 		width: auto;
 		height: auto;
 		top: auto;
-		margin: 5px 20px;
+		margin: 5px 30px;
 		padding: 0px;
 		-webkit-mask-image: none;
 		mask-image: none;
@@ -204,7 +204,7 @@ footer {
 		width: auto;
 		height: auto;
 		top: auto;
-		margin: 5px 20px;
+		margin: 5px 30px;
 		padding: 0px;
 		-webkit-mask-image: none;
 		mask-image: none;
